--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 </head>
 
 <body>
+    <!-- ================= header ================= -->
+    <header class="header">
+
+        <div class="logo-container">
+            <img src="./img/logo.svg" alt="logo">
+            <h4 class="logo">Three Dots</h4>
+        </div>
+
+        <nav>
+            <ul class="nav-list">
+                <li><a href="#" class="nav-link">Specs</a></li>
+                <li><a href="#" class="nav-link">Products</a></li>
+                <li><a href="#" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+
+        <div class="cart">
+            <img src="./img/cart.svg" alt="cart">
+        </div>
+
+    </header>
 
 </body>
 
